--- a/easymeet_api/package.json
+++ b/easymeet_api/package.json
@@ -12,11 +12,12 @@
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
-    
   },
   "dependencies": {
     "express": "^4.17.1",
     "googleapis": "^64.0.0",
+    "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
     "ts-node-dev": "^1.0.0"
   }
 }
