--- a/easymeet.backend/package.json
+++ b/easymeet.backend/package.json
@@ -4,18 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev:server": "ts-node-dev src/server.ts --transpile-only --ignore-watch node_modules --respawn",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+    "start": "node dist/server.js",
+    "dev": "tsnd --transpile-only --ignore-watch node_modules src/server.ts",
+    "build": "tsc",
+    "typeorm": "tsnd ./node_modules/typeorm/cli.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/multer": "^1.4.4",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "multer": "^1.4.2",
-    "sqlite3": "^5.0.0",
+    "pg": "^8.5.1",
     "typeorm": "^0.2.29",
     "yup": "^0.29.3"
   },
